ingress_sample1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-edu4-app-v1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: true
spec:
  rules:
  - host: 210.106.105.155.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-edu4-app
            port:
              number: 5000
